<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_text">This is a historical Quiz\nabout Russia</string>
    <string name="button_text">Press here</string>

    <string name="first_question">1. Who was the first democratically elected president of Russia?</string>
    <string name="first_answer">Answer</string>

    <string name="second_question">2. What was the name of Tsar Nicholas II’s wife? (Two answers)</string>
    <string name="option_one">Angela</string>
    <string name="option_two">Sasha</string>
    <string name="option_three">Alicia</string>
    <string name="option_four">Alexandra</string>

    <string name="third_question">3. From what modern country did Joseph Stalin come?</string>
    <string name="option_one_third_question">Ukraine</string>
    <string name="option_two_third_question">Russia</string>
    <string name="option_three_third_question">Belarus</string>
    <string name="option_four_third_question">Georgia</string>

    <string name="fourth_question">4. Which of these wars was fought in Russia?</string>
    <string name="option_one_fourth_question">the Crimean War</string>
    <string name="option_two_fourth_question">the War of 1812</string>
    <string name="option_three_fourth_question">the Sepoy Mutiny</string>
    <string name="option_four_fourth_question">the Boer War</string>

    <string name="fifth_question">5. What was the first name of the Russian ruler called "the Terrible"?</string>
    <string name="results">Results here</string>


    <string name="first_text_one">boris yeltsin</string>
    <string name="first_text_two">yeltsin</string>
    <string name="fifth_text">ivan</string>
    <string name="score_text_part_one">"You scored "</string>
    <string name="score_text_part_two">" points"</string>
</resources>
